docs/2.0.0/benchmarks.md
# Benchmarks

## Environment

- **CPU:** AMD Ryzen 9 9950X3D
- **Hash size:** 512MB

## Level 1 Match ([XOT](https://berg.earthlingz.de/xot/aboutxot.php))

**2.0.0 vs 1.1.0**

- Games: 21568 W: 10537 L: 10281 D: 750
- Ptnml(0-2): 2410, 341, 5141, 367, 2525
- Elo: +4.1 ± 4.5
- Disc diff: +7206 (+0.33/game)

## Endgame Test Suite

| Test       | Threads | OC     | Time (2.0.0) | Time (1.1.0) | Speedup |
|:-----------|:--------|:-------|-------------:|-------------:|--------:|
| FFO #40–59 | Multi   | On     |     8.1450s  |     8.7780s  |   +7.2% |
| FFO #40–59 | Multi   | Off    |     9.6388s  |    10.4085s  |   +7.4% |
| FFO #40–59 | Single  | On     |   135.4956s  |   146.9248s  |   +7.8% |
| FFO #40–59 | Single  | Off    |   175.3038s  |   191.2633s  |   +8.3% |
| FFO #60–79 | Multi   | On     |   229.4696s  |   274.4764s  |  +16.4% |
| FFO #60–79 | Multi   | Off    |   264.8354s  |   335.5702s  |  +21.1% |

> [!NOTE]
> Node counts and NPS in 2.0.0 are higher than previous versions because `evaluate_moves_fast` now properly counts nodes during move evaluation.

### FFO #40–59

#### Multi-threaded

**OC: On**

|  #  | Depth  |  Time(s)  |      Nodes      |      NPS      |   Line   | Score  | Expected                         |
|----:|-------:|----------:|----------------:|--------------:|:---------|-------:|:---------------------------------|
|  40 |   20   |    0.0124 |      11,777,159 |   949,770,887 | A2 B1 C1 |   38.0 |  38 : A2                         |
|  41 |   22   |    0.0262 |      27,811,628 | 1,061,512,519 | H4 A3 A2 |    0.0 |   0 : H4                         |
|  42 |   22   |    0.0211 |      21,693,993 | 1,028,151,327 | G2 H1 C2 |    6.0 |   6 : G2                         |
|  43 |   23   |    0.0577 |      61,602,661 | 1,067,637,106 | G3 H6 C7 |  -12.0 | -12 : G3,C7                      |
|  44 |   23   |    0.0195 |      12,967,388 |   664,994,256 | D2 G5 B8 |  -14.0 | -14 : D2,B8                      |
|  45 |   24   |    0.1371 |     219,698,304 | 1,602,467,571 | B2 C1 G5 |    6.0 |   6 : B2                         |
|  46 |   24   |    0.0558 |      51,845,628 |   929,133,118 | B3 C1 B1 |   -8.0 |  -8 : B3                         |
|  47 |   25   |    0.0270 |      24,687,664 |   914,357,926 | G2 B8 B7 |    4.0 |   4 : G2                         |
|  48 |   25   |    0.0961 |     115,477,370 | 1,201,637,565 | F6 F2 G6 |   28.0 |  28 : F6                         |
|  49 |   26   |    0.1584 |     204,583,685 | 1,291,563,668 | E1 H4 G6 |   16.0 |  16 : E1                         |
|  50 |   26   |    0.3510 |     583,497,934 | 1,662,387,276 | D8 E8 G8 |   10.0 |  10 : D8                         |
|  51 |   27   |    0.1468 |     192,860,845 | 1,313,765,974 | E2 H2 G7 |    6.0 |   6 : E2,A3                      |
|  52 |   27   |    0.1592 |     213,214,637 | 1,339,287,921 | A3 F2 E1 |    0.0 |   0 : A3                         |
|  53 |   28   |    0.7695 |   1,469,871,606 | 1,910,164,530 | D8 B6 D7 |   -2.0 |  -2 : D8                         |
|  54 |   28   |    1.2473 |   2,675,057,785 | 2,144,678,734 | C7 G6 G5 |   -2.0 |  -2 : C7                         |
|  55 |   29   |    3.2707 |   6,748,421,841 | 2,063,295,882 | G6 H7 C1 |    0.0 |   0 : G6,B7,E2,G4                |
|  56 |   29   |    0.4612 |     725,931,546 | 1,574,005,954 | H5 H4 H3 |    2.0 |   2 : H5                         |
|  57 |   30   |    0.5783 |     998,251,600 | 1,726,182,950 | A6 B5 B4 |  -10.0 | -10 : A6                         |
|  58 |   30   |    0.5473 |     905,650,520 | 1,654,760,680 | G1 F2 H3 |    4.0 |   4 : G1                         |
|  59 |   34   |    0.0024 |          69,890 |    29,120,833 | G8 E8 H4 |   64.0 |  64 : H4,G8,E8                   |

- Total time : 8.1450s
- Total nodes: 15,264,973,684
- NPS        : 1,874,152,693

**OC: Off**

|  #  | Depth  |  Time(s)  |      Nodes      |      NPS      |   Line   | Score  | Expected                         |
|----:|-------:|----------:|----------------:|--------------:|:---------|-------:|:---------------------------------|
|  40 |   20   |    0.0152 |      11,837,123 |   778,758,092 | A2 B1 C1 |   38.0 |  38 : A2                         |
|  41 |   22   |    0.0327 |      27,437,741 |   839,074,648 | H4 A3 A2 |    0.0 |   0 : H4                         |
|  42 |   22   |    0.0278 |      21,779,349 |   783,429,820 | G2 H1 C2 |    6.0 |   6 : G2                         |
|  43 |   23   |    0.0716 |      61,453,080 |   858,283,240 | G3 H6 C7 |  -12.0 | -12 : G3,C7                      |
|  44 |   23   |    0.0248 |      12,864,493 |   518,729,556 | D2 G5 B8 |  -14.0 | -14 : D2,B8                      |
|  45 |   24   |    0.1706 |     222,621,026 | 1,304,929,812 | B2 C1 G5 |    6.0 |   6 : B2                         |
|  46 |   24   |    0.0672 |      51,266,938 |   762,900,863 | B3 C1 B1 |   -8.0 |  -8 : B3                         |
|  47 |   25   |    0.0336 |      24,767,271 |   737,121,161 | G2 B8 B7 |    4.0 |   4 : G2                         |
|  48 |   25   |    0.1162 |     114,561,425 |   985,898,666 | F6 F2 G6 |   28.0 |  28 : F6                         |
|  49 |   26   |    0.1898 |     202,720,827 | 1,068,076,012 | E1 H4 G6 |   16.0 |  16 : E1                         |
|  50 |   26   |    0.4196 |     587,674,131 | 1,400,557,986 | D8 E8 G8 |   10.0 |  10 : D8                         |
|  51 |   27   |    0.1758 |     191,811,008 | 1,091,075,131 | E2 H2 G7 |    6.0 |   6 : E2,A3                      |
|  52 |   27   |    0.1921 |     213,428,232 | 1,111,026,715 | A3 F2 E1 |    0.0 |   0 : A3                         |
|  53 |   28   |    0.9195 |   1,476,695,266 | 1,605,976,363 | D8 B6 D7 |   -2.0 |  -2 : D8                         |
|  54 |   28   |    1.4672 |   2,648,649,506 | 1,805,240,939 | C7 G6 G5 |   -2.0 |  -2 : C7                         |
|  55 |   29   |    3.8233 |   6,692,721,852 | 1,750,509,207 | G6 H7 C1 |    0.0 |   0 : G6,B7,E2,G4                |
|  56 |   29   |    0.5535 |     750,592,675 | 1,356,084,327 | H5 H4 H3 |    2.0 |   2 : H5                         |
|  57 |   30   |    0.6912 |   1,012,286,368 | 1,464,534,676 | A6 B5 B4 |  -10.0 | -10 : A6                         |
|  58 |   30   |    0.6442 |     900,813,664 | 1,398,344,713 | G1 F2 H3 |    4.0 |   4 : G1                         |
|  59 |   34   |    0.0029 |          69,941 |    24,117,586 | G8 E8 H4 |   64.0 |  64 : H4,G8,E8                   |

- Total time : 9.6388s
- Total nodes: 15,226,051,916
- NPS        : 1,579,662,605

#### Single-threaded

**OC: On**

|  #  | Depth  |  Time(s)  |      Nodes      |      NPS      |   Line   | Score  | Expected                         |
|----:|-------:|----------:|----------------:|--------------:|:---------|-------:|:---------------------------------|
|  40 |   20   |    0.0971 |       9,675,131 |    99,640,896 | A2 B1 C1 |   38.0 |  38 : A2                         |
|  41 |   22   |    0.1544 |      16,070,890 |   104,086,075 | H4 A3 A2 |    0.0 |   0 : H4                         |
|  42 |   22   |    0.1562 |      14,412,998 |    92,272,714 | G2 H1 C2 |    6.0 |   6 : G2                         |
|  43 |   23   |    0.5664 |      47,617,525 |    84,070,489 | G3 H6 H5 |  -12.0 | -12 : G3,C7                      |
|  44 |   23   |    0.1028 |       8,509,603 |    82,778,239 | D2 G5 B8 |  -14.0 | -14 : D2,B8                      |
|  45 |   24   |    1.9698 |     178,072,982 |    90,401,554 | B2 C1 G5 |    6.0 |   6 : B2                         |
|  46 |   24   |    0.3317 |      31,592,991 |    95,245,677 | B3 C1 B1 |   -8.0 |  -8 : B3                         |
|  47 |   25   |    0.1386 |      13,269,118 |    95,736,782 | G2 B8 B7 |    4.0 |   4 : G2                         |
|  48 |   25   |    1.2227 |     101,723,166 |    83,195,523 | F6 F2 G6 |   28.0 |  28 : F6                         |
|  49 |   26   |    1.6234 |     139,287,297 |    85,799,739 | E1 H4 G6 |   16.0 |  16 : E1                         |
|  50 |   26   |    6.1229 |     531,419,539 |    86,792,131 | D8 E8 G8 |   10.0 |  10 : D8                         |
|  51 |   27   |    1.7090 |     158,022,361 |    92,464,810 | E2 H2 G7 |    6.0 |   6 : E2,A3                      |
|  52 |   27   |    1.6062 |     149,710,346 |    93,207,786 | A3 F2 E1 |    0.0 |   0 : A3                         |
|  53 |   28   |   11.1230 |   1,105,661,956 |    99,403,215 | D8 B6 D7 |   -2.0 |  -2 : D8                         |
|  54 |   28   |   22.4145 |   2,346,793,974 |   104,699,814 | C7 G6 G5 |   -2.0 |  -2 : C7                         |
|  55 |   29   |   61.7254 |   5,985,241,465 |    96,965,617 | G6 H7 C1 |    0.0 |   0 : G6,B7,E2,G4                |
|  56 |   29   |    7.3682 |     662,453,122 |    89,907,049 | H5 H4 H3 |    2.0 |   2 : H5                         |
|  57 |   30   |    9.0094 |     819,024,371 |    90,907,760 | A6 B5 B4 |  -10.0 | -10 : A6                         |
|  58 |   30   |    8.0512 |     752,916,061 |    93,516,005 | G1 F2 H3 |    4.0 |   4 : G1                         |
|  59 |   34   |    0.0027 |          68,129 |    25,232,963 | G8 E8 H4 |   64.0 |  64 : H4,G8,E8                   |

- Total time : 135.4956s
- Total nodes: 13,071,543,025
- NPS        : 96,472,085

**OC: Off**

|  #  | Depth  |  Time(s)  |      Nodes      |      NPS      |   Line   | Score  | Expected                         |
|----:|-------:|----------:|----------------:|--------------:|:---------|-------:|:---------------------------------|
|  40 |   20   |    0.1266 |       9,675,131 |    76,422,836 | A2 B1 C1 |   38.0 |  38 : A2                         |
|  41 |   22   |    0.2000 |      16,070,890 |    80,354,450 | H4 A3 A2 |    0.0 |   0 : H4                         |
|  42 |   22   |    0.2033 |      14,412,998 |    70,895,219 | G2 H1 C2 |    6.0 |   6 : G2                         |
|  43 |   23   |    0.7358 |      47,617,525 |    64,715,310 | G3 H6 H5 |  -12.0 | -12 : G3,C7                      |
|  44 |   23   |    0.1320 |       8,509,603 |    64,466,689 | D2 G5 B8 |  -14.0 | -14 : D2,B8                      |
|  45 |   24   |    2.5318 |     178,072,982 |    70,334,537 | B2 C1 G5 |    6.0 |   6 : B2                         |
|  46 |   24   |    0.4267 |      31,592,991 |    74,040,288 | B3 C1 B1 |   -8.0 |  -8 : B3                         |
|  47 |   25   |    0.1791 |      13,269,118 |    74,087,761 | G2 B8 B7 |    4.0 |   4 : G2                         |
|  48 |   25   |    1.5700 |     101,723,166 |    64,791,825 | F6 F2 G6 |   28.0 |  28 : F6                         |
|  49 |   26   |    2.1007 |     139,287,297 |    66,305,183 | E1 H4 G6 |   16.0 |  16 : E1                         |
|  50 |   26   |    8.0002 |     531,419,539 |    66,425,782 | D8 E8 G8 |   10.0 |  10 : D8                         |
|  51 |   27   |    2.1950 |     158,022,361 |    71,991,964 | E2 H2 G7 |    6.0 |   6 : E2,A3                      |
|  52 |   27   |    2.0657 |     149,710,346 |    72,474,389 | A3 F2 E1 |    0.0 |   0 : A3                         |
|  53 |   28   |   14.4406 |   1,105,661,956 |    76,566,206 | D8 B6 D7 |   -2.0 |  -2 : D8                         |
|  54 |   28   |   29.2022 |   2,346,793,974 |    80,363,602 | C7 G6 G5 |   -2.0 |  -2 : C7                         |
|  55 |   29   |   79.8079 |   5,985,241,465 |    74,995,602 | G6 H7 C1 |    0.0 |   0 : G6,B7,E2,G4                |
|  56 |   29   |    9.4804 |     662,453,122 |    69,876,073 | H5 H4 H3 |    2.0 |   2 : H5                         |
|  57 |   30   |   11.5265 |     819,024,371 |    71,055,773 | A6 B5 B4 |  -10.0 | -10 : A6                         |
|  58 |   30   |   10.3761 |     752,916,061 |    72,562,529 | G1 F2 H3 |    4.0 |   4 : G1                         |
|  59 |   34   |    0.0032 |          68,129 |    21,290,313 | G8 E8 H4 |   64.0 |  64 : H4,G8,E8                   |

- Total time : 175.3038s
- Total nodes: 13,071,543,025
- NPS        : 74,565,087

### FFO #60–79

#### Multi-threaded

**OC: On**

|  #  | Depth  |  Time(s)  |      Nodes      |      NPS      |   Line   | Score  | Expected                         |
|----:|-------:|----------:|----------------:|--------------:|:---------|-------:|:---------------------------------|
|  60 |   24   |    0.0465 |      49,557,322 | 1,065,748,860 | C2 B4 A4 |   20.0 |  20 : C2                         |
|  61 |   25   |    0.0942 |     129,626,507 | 1,376,077,569 | G1 H6 H5 |  -14.0 | -14 : H3,G1                      |
|  62 |   27   |    0.5641 |     942,981,164 | 1,671,656,026 | E8 H5 H2 |   28.0 |  28 : E8                         |
|  63 |   27   |    0.3277 |     553,812,694 | 1,689,999,066 | F2 F1 C8 |   -2.0 |  -2 : F2                         |
|  64 |   27   |    1.2180 |   2,310,972,633 | 1,897,350,273 | B4 H6 H7 |   20.0 |  20 : B4                         |
|  65 |   28   |    3.2529 |   5,957,572,802 | 1,831,465,093 | G1 G7 C8 |   10.0 |  10 : G1                         |
|  66 |   28   |    1.4083 |   2,274,251,479 | 1,614,891,343 | H3 E1 G4 |   30.0 |  30 : H3                         |
|  67 |   28   |    2.2860 |   3,955,325,774 | 1,730,238,746 | H3 F8 A6 |   22.0 |  22 : H3                         |
|  68 |   30   |    7.3801 |  11,113,117,987 | 1,505,822,142 | E8 D8 A5 |   28.0 |  28 : E8                         |
|  69 |   30   |    1.5454 |   2,984,916,244 | 1,931,484,563 | H3 H5 A2 |    0.0 |   0 : H3                         |
|  70 |   30   |    0.5603 |     815,662,991 | 1,455,761,183 | E3 F3 E8 |  -24.0 | -24 : E3                         |
|  71 |   31   |    1.8841 |   2,901,015,833 | 1,539,735,594 | D2 A5 E2 |   20.0 |  20 : D2                         |
|  72 |   31   |   20.1284 |  31,364,406,656 | 1,558,216,582 | E1 F1 H5 |   24.0 |  24 : E1                         |
|  73 |   31   |    2.5459 |   4,524,720,822 | 1,777,257,874 | G4 H6 E8 |   -4.0 |  -4 : G4                         |
|  74 |   31   |   18.4932 |  27,641,582,422 | 1,494,688,990 | F1 D1 C1 |  -30.0 | -30 : F1                         |
|  75 |   32   |   16.2282 |  28,319,491,347 | 1,745,079,020 | D2 D1 H5 |   14.0 |  14 : D2                         |
|  76 |   32   |   82.3511 | 106,796,138,046 | 1,296,839,241 | A3 A2 B3 |   32.0 |  32 : A3                         |
|  77 |   34   |   52.2254 |  63,740,186,999 | 1,220,482,505 | B7 A5 A7 |   34.0 |  34 : B7                         |
|  78 |   34   |   16.9002 |  24,194,296,277 | 1,431,598,222 | F1 G1 A2 |    8.0 |   8 : F1                         |
|  79 |   36   |    0.0296 |      16,653,222 |   562,608,851 | D7 D8 H8 |   64.0 |  64 : D7                         |

- Total time : 229.4696s
- Total nodes: 320,586,289,221
- NPS        : 1,397,075,208

**OC: Off**

|  #  | Depth  |  Time(s)  |      Nodes      |      NPS      |   Line   | Score  | Expected                         |
|----:|-------:|----------:|----------------:|--------------:|:---------|-------:|:---------------------------------|
|  60 |   24   |    0.0583 |      51,018,473 |   875,102,453 | C2 B4 A4 |   20.0 |  20 : C2                         |
|  61 |   25   |    0.1144 |     128,905,711 | 1,126,798,173 | H3 F1 B7 |  -14.0 | -14 : H3,G1                      |
|  62 |   27   |    0.6703 |     945,535,166 | 1,410,614,898 | E8 H5 H2 |   28.0 |  28 : E8                         |
|  63 |   27   |    0.3867 |     555,049,649 | 1,435,349,493 | F2 F1 C8 |   -2.0 |  -2 : F2                         |
|  64 |   27   |    1.8041 |   2,970,206,898 | 1,646,364,890 | B4 H6 H7 |   20.0 |  20 : B4                         |
|  65 |   28   |    3.8123 |   5,957,864,511 | 1,562,800,543 | G1 G7 C8 |   10.0 |  10 : G1                         |
|  66 |   28   |    1.6439 |   2,229,613,216 | 1,356,294,918 | H3 E1 G4 |   30.0 |  30 : H3                         |
|  67 |   28   |    2.7488 |   4,018,749,411 | 1,462,001,386 | H3 F8 A6 |   22.0 |  22 : H3                         |
|  68 |   30   |    8.5097 |  10,952,751,959 | 1,287,090,257 | E8 D8 A5 |   28.0 |  28 : E8                         |
|  69 |   30   |    1.8254 |   2,994,434,625 | 1,640,426,550 | H3 H5 A2 |    0.0 |   0 : H3                         |
|  70 |   30   |    0.6586 |     808,681,192 | 1,227,879,125 | E3 F3 E8 |  -24.0 | -24 : E3                         |
|  71 |   31   |    2.2232 |   2,934,168,826 | 1,319,795,262 | D2 A5 E2 |   20.0 |  20 : D2                         |
|  72 |   31   |   23.3332 |  31,383,870,710 | 1,345,030,716 | E1 F1 H5 |   24.0 |  24 : E1                         |
|  73 |   31   |    2.9497 |   4,482,762,047 | 1,519,734,904 | G4 H6 E8 |   -4.0 |  -4 : G4                         |
|  74 |   31   |   20.0664 |  25,459,133,822 | 1,268,744,459 | F1 D1 C1 |  -30.0 | -30 : F1                         |
|  75 |   32   |   18.9262 |  28,219,075,563 | 1,491,005,884 | D2 D1 H5 |   14.0 |  14 : D2                         |
|  76 |   32   |   96.9070 | 106,128,910,084 | 1,095,162,476 | A3 A2 B3 |   32.0 |  32 : A3                         |
|  77 |   34   |   58.5037 |  61,154,349,288 | 1,045,307,379 | B7 A5 A7 |   34.0 |  34 : B7                         |
|  78 |   34   |   19.6586 |  24,286,234,686 | 1,235,400,013 | F1 G1 A2 |    8.0 |   8 : F1                         |
|  79 |   36   |    0.0349 |      15,501,957 |   444,182,149 | D7 D8 H8 |   64.0 |  64 : D7                         |

- Total time : 264.8354s
- Total nodes: 315,676,817,794
- NPS        : 1,191,973,648
